change layout to fix cut off scroll bar in content pane and allow scrolling over the info header component

--- a/spotlight-react/src/components/info-header/info-header-styles.scss
+++ b/spotlight-react/src/components/info-header/info-header-styles.scss
@@ -8,7 +8,7 @@
     width: 100%;
     height: $info-height;
     z-index: 0;
-    
+    pointer-events: none;
     .info__picture-container {
         height: 200px;
         width: 200px;
@@ -29,5 +29,9 @@
         display: inline-block;
         font-weight: 700;
         font-size: 3rem;
+        pointer-events: all;
+    }
+    .info__text {
+        pointer-events: all;
     }
 }
