--- a/spotlight-react/src/index.scss
+++ b/spotlight-react/src/index.scss
@@ -62,18 +62,13 @@ body {
     position: relative;
     z-index: 10;
     nav { height: $nav-height }
-    .columns {
-      height: 100%;
-      max-height: 100%;
-      width: 100%;
-      max-width: 100%;
-      #content {
-        height: 100%;
-        overflow: scroll;
-        position: relative;
-        clip-path: inset($nav-height 0 0 0);
-        padding-top: 65px !important;
-      }
+    #content {
+      height: calc(100% - #{$nav-height});
+      width: 80%;
+      overflow: scroll;
+      position: fixed;
+      right: 0;
+      margin-top: $nav-height;
     }
   }
 }
